--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -14,8 +14,11 @@ jobs:
 
       - name: Update README
         run: |
-          # Use a script to update and validate URLs in README.md
-          iiTxicz/iiTxicz/.github/workflows/update_readme_script.sh
+          ${pwd}/update_readme_script.sh
+        with: 
+          token: {
+            ${{secrets.github_token}}
+          }
 
       - name: Commit and push changes
         run: |
@@ -24,3 +27,10 @@ jobs:
           git add README.md
           git commit -m "Update README" || echo "No changes to commit"
           git push
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
