--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Make the script files executable
+        run: chmod +x ./update_readme_script.sh
+
       - name: Update README
         run: ./update_readme_script.sh
 
