--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add ../../../README.md
+          cd ../../../
+          git add README.md
           git commit -m "Update README" || echo "No changes to commit"
           git push
 
