--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -26,7 +26,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           cd ../../../
-          git add README.md
+          git add readme.md
           git commit -m "Update README" || echo "No changes to commit"
           git push
 
